INCLUDE_DIRECTORIES(${SHEET_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

IF (COMPILE_PLAIN_EXECUTABLES)
  ADD_EXECUTABLE(csvdiff ssdiff.cpp)
  TARGET_LINK_LIBRARIES(csvdiff sheet)
  INSTALL(TARGETS csvdiff COMPONENT ${CSVBIN} DESTINATION bin)
ENDIF ()

ADD_EXECUTABLE(ssdiff ssdiff.cpp)
TARGET_LINK_LIBRARIES(ssdiff sheet_full)
INSTALL(TARGETS ssdiff COMPONENT ${BIGBIN} DESTINATION bin)
