if (HAVE_TR1)
  ADD_DEFINITIONS("-std=c++0x" -DHAVE_TR1)
endif ()

INCLUDE_DIRECTORIES(${SHEET_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

IF (COMPILE_PLAIN_EXECUTABLES)
  ADD_EXECUTABLE(csvdiff ssdiff.cpp)
  TARGET_LINK_LIBRARIES(csvdiff coopy_plain)
  INSTALL(TARGETS csvdiff COMPONENT ${CSVBIN} DESTINATION bin)
  ADD_EXECUTABLE(csvrediff ssrediff.cpp)
  TARGET_LINK_LIBRARIES(csvrediff coopy_plain)
  INSTALL(TARGETS csvrediff COMPONENT ${CSVBIN} DESTINATION bin)
ENDIF ()

ADD_EXECUTABLE(ssdiff ssdiff.cpp)
TARGET_LINK_LIBRARIES(ssdiff coopy_full)
INSTALL(TARGETS ssdiff COMPONENT ${BIGBIN} DESTINATION bin)

ADD_EXECUTABLE(ssrediff ssrediff.cpp)
TARGET_LINK_LIBRARIES(ssrediff coopy_full)
INSTALL(TARGETS ssrediff COMPONENT ${BIGBIN} DESTINATION bin)
