INCLUDE_DIRECTORIES(${SHEET_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

IF (COMPILE_PLAIN_EXECUTABLES)
  ADD_EXECUTABLE(csvformat ssformat.cpp)
  TARGET_LINK_LIBRARIES(csvformat sheet)
  INSTALL(TARGETS csvformat COMPONENT utilities DESTINATION bin)
ENDIF ()

ADD_EXECUTABLE(ssformat ssformat.cpp)
TARGET_LINK_LIBRARIES(ssformat sheet_full)

INSTALL(TARGETS ssformat COMPONENT utilities DESTINATION bin)
