INCLUDE_DIRECTORIES(${SHEET_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

IF (COMPILE_PLAIN_EXECUTABLES)
  ADD_EXECUTABLE(csvformat ssformat.cpp)
  TARGET_LINK_LIBRARIES(csvformat coopy_plain)
  INSTALL(TARGETS csvformat COMPONENT ${CSVBIN} DESTINATION bin)
ENDIF ()

ADD_EXECUTABLE(ssformat ssformat.cpp)
TARGET_LINK_LIBRARIES(ssformat coopy_full)

INSTALL(TARGETS ssformat COMPONENT ${BIGBIN} DESTINATION bin)
